# oil-palm-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  test.py
alembic/: env.py
alembic/versions/: 14be70a6aab0_add_bounds_for_predictions.py  3097e50fd0ff_add_created_at_and_updated_at_for_all_.py  3321f842c0d8_add_center_coords_for_predictions.py  3cc5f84e2b28_add_planting_year_status_and_pemupukan_.py  40200583a7da_fix_username_in_user_table.py  5c68935218e3_add_tree_id_for_table_trees.py  6405eaa2a9f0_change_prediction_id_to_optional.py  659df5b0e9dc_remove_healthiness_add_coco_bbox_rename_.py  674e4200074a_add_count_in_predictions.py  82a84c5aebb6_convert_to_sqlmodel.py  9906aed008a9_add_healthiness_field_in_predictions_.py  9f1ad3765c57_init.py  c572f4217894_add_trees_table.py  dc7acb5b2a24_add_name_to_table_users.py  e0f488b7e3dc_add_prediction_id_for_predictions.py  edabf1f4f250_add_planting_year_for_each_tree.py
app/: main.py
app/api/: deps.py
app/core/: auth.py  config.py  security.py
app/crud/: __init__.py  base.py  crud_areas.py  crud_prediction.py  crud_trees.py  crud_user.py
app/db/: base.py  base_class.py  session.py
app/mercator/: google_static_maps.py  mercator_projection.py
app/ml_inference/: type.py  types.py  yolo.py  yolo4.py  yolo7.py  yolo8.py  yolo82.py
app/models/: __init__.py  area.py  prediction.py  tree.py  user.py
app/schemas/: __init__.py  area.py  (+2 more)
scripts/: run-postgres.sh
terraform/: gce.tf  install-docker.sh  provider.tf
test/: index.js
(+4 files in other folders)
